<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="413dp"
        android:layout_height="54dp"
        android:background="@color/design_default_color_primary_dark"
        android:gravity="center"
        android:text="@string/Title_Main"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <ImageButton
        android:id="@+id/buttonMarines"
        android:layout_width="206dp"
        android:layout_height="372dp"
        android:contentDescription="@string/Marines"
        android:onClick="siguienteMarines"
        android:src="@drawable/marines"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_weight="1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/buttonXenos"
        android:layout_width="206dp"
        android:layout_height="372dp"
        android:contentDescription="@string/Xenos"
        android:onClick="siguienteXenos"
        android:src="@drawable/xenos"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/buttonMarines"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintVertical_weight="1"
        tools:ignore="DuplicateSpeakableTextCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/textXenosMain"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/Xenos"
        android:textColor="@color/xeno"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonXenos"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textMarinMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/Marines"
        android:textColor="@color/marine"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonMarines"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Choose"
        android:textColor="@color/material_dynamic_tertiary40"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMain" />

    <TextView
        android:id="@+id/textMain"
        android:layout_width="410dp"
        android:layout_height="158dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/MainText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>